bindings/python/src/slatedb/ffi/slatedb.py


_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidb.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidb.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidb.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidb.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_begin.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_begin.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_delete.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_delete.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_delete_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_delete_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_flush.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_flush.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_flush_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_flush_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_key_value.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_key_value.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_key_value_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_key_value_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_get_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_merge.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_merge.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_merge_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_merge_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_metrics.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_metrics.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_put.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_put.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_put_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_put_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_scan_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_shutdown.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_shutdown.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_snapshot.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_snapshot.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_status.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_status.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_write.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_write.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_write_with_options.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidb_write_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbbuilder.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbbuilder.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbbuilder.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbbuilder.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffidbbuilder_new.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffidbbuilder_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_build.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_build.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_db_cache_disabled.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_db_cache_disabled.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_merge_operator.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_merge_operator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_seed.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_seed.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_settings.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_settings.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_sst_block_size.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_sst_block_size.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_wal_object_store.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_wal_object_store.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbiterator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbiterator.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbiterator.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbiterator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbiterator_next.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbiterator_next.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbiterator_seek.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbiterator_seek.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbreader.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbreader.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbreader.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbreader.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_get.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_get.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_get_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_get_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix_with_options.restype = (
    ctypes.c_uint64
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_scan_with_options.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_shutdown.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreader_shutdown.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbreaderbuilder.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_clone_ffidbreaderbuilder.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbreaderbuilder.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_free_ffidbreaderbuilder.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffidbreaderbuilder_new.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_constructor_ffidbreaderbuilder_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_build.argtypes = (ctypes.c_void_p,)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_build.restype = ctypes.c_uint64
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_checkpoint_id.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_checkpoint_id.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_merge_operator.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_merge_operator.restype = None
_UniffiLib.uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_options.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
